# duckdelta

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.aws/: config  credentials
src/: delta_sink.rs  error.rs  lib.rs  main copy.rs.backup  main.rs
src/pipeline/: mod.rs
src/pipeline/engines/: mod.rs
src/pipeline/sinks/: delta_sink.rs  mod.rs
src/pipeline/sources/: mod.rs
tests/: test_pipeline.rs
