[package]
name = "rust_etl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }

# Assume that version DuckDB version 0.9.2 is used.
duckdb = { version = "1.1.1", features = ["bundled"] }
deltalake = { version = "0.22.0",features = [
    "datafusion",
    "s3",
]}